<resources>
    <string name="app_name" translatable="false">R2 Reader</string>
    <string name="menu_item_show_epub_list">Show List</string>
    <string name="menu_item_add_epub">Add ePub</string>
    <string name="menu_item_filter">Filter</string>
    <string name="progress_wait_while_searching_book">Please wait.</string>
    <string name="progress_wait">Please wait.</string>
    <string name="progress_wait_while_downloading_book">Please wait while your publication is being downloaded.</string>
    <string name="progress_wait_while_preparing_book">Please wait while your publication is being prepared.</string>
    <string name="progress_wait_while_preparing_audiobook">Please wait while your audiobook is being prepared.</string>
    <string name="progress_wait_while_loading_feed">Please wait while your feed is loading.</string>
    <string name="error_invalid_epub">Invalid Epub</string>
    <string name="fallback_no_description">No description</string>
    <string name="button_dismiss">DISMISS</string>
    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="epubactivity_set_bookmark">Add a bookmark</string>
    <string name="epubactivity_settings">User Settings</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start">Read Aloud</string>
    <string name="epubactivity_read_aloud_stop">Stop Read Aloud</string>
    <string name="epubactivity_search">Search</string>
    <string name="epubactivity_accessibility">Accessibility</string>
    <string name="epubactivity_accessibility_screen_reader_start">Start Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_pause">Pause Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_resume">Resume Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_stop">Stop Screen Reader</string>
    <string name="title_activity_opdscatalog">OPDS Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_r2_about">About R2 Reader</string>
    <string name="title_activity_opds_list">OPDS Feeds</string>
    <string name="title_activity_opds_detail">Detail</string>
    <string name="title_fragment_drm_management">DRM Management</string>
    <string name="title_activity_epub">Detail</string>
    <string name="floating_button_add_book">Add a Book</string>
    <string name="floating_button_add_feed">Add a OPDS Feed</string>
    <string name="about_r2_reader">About R2 Reader</string>
    <string name="more_options">More Options</string>
    <string name="opds_feeds">OPDS Feeds</string>
    <string name="popup_delete_button">DELETE</string>
    <string name="add_publication_to_library">Add a publication to your library</string>
    <string name="select_from_your_device">select from your device</string>
    <string name="download_from_url">download from a url</string>
    <string name="app_version_header">Version</string>
    <string name="app_version_label">App Version:</string>
    <string name="app_version">2.2.0</string>
    <string name="github_tab_label">GitHub Tag:</string>
    <string name="github_tag">2.2.0</string>
    <string name="copyright_label">Copyright</string>
    <string name="copyright">\@ 2019 European Digital Reading Lab</string>
    <string name="bsd_license_label">[BSD-3 license]</string>
    <string name="bsd_license_label_accessible">[B S D 3 license]</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="acknowledgements_french_state">R2 Reader wouldn\'t have been developed without the financial help of the French state.</string>
    <string name="catalog_list_more">More</string>
    <string name="catalog_detail_download_button">Download</string>
    <string name="menu_label_drm">DRM</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_toc">TOC</string>
    <string name="usersettings_label_font">Font</string>
    <string name="usersettings_appearance_default">Default</string>
    <string name="usersettings_appearance_sepia">Sepia</string>
    <string name="usersettings_appearance_night">Night</string>
    <string name="usersettings_label_scroll_mode">Scroll mode</string>
    <string name="usersettings_publisher_default">"Publisher's Default"</string>
    <string name="usersettings_publisher_default_accessibility">"Publisher's Default Settings"</string>
    <string name="usersettings_label_columns">Columns</string>
    <string name="usersettings_auto">Auto</string>
    <string name="usersettings_column_one">1</string>
    <string name="usersettings_column_two">2</string>
    <string name="usersettings_label_page_margins">Page Margins</string>
    <string name="usersettings_page_margin_default">0.75</string>
    <string name="usersettings_label_word_spacing">Word Spacing</string>
    <string name="usersettings_label_letter_spacing">Letter Spacing</string>
    <string name="usersettings_label_line_height">Line Height</string>
    <string name="usersettings_label_TTS_speech_speed">TTS speed</string>
    <string name="usersettings_description_TTS_speech_speed">Set TTS speech speed</string>
    <string name="usersettings_description_brightness">Set Brightness</string>
    <string name="usersettings_description_font_increase">Increase Font Size</string>
    <string name="usersettings_description_font_decrease">Decrease Font Size</string>
    <string name="usersettings_description_pm_increase">Increase Page Margins Size</string>
    <string name="usersettings_description_pm_decrease">Decrease Page Margins Size</string>
    <string name="usersettings_description_ws_increase">Increase Word Spacing</string>
    <string name="usersettings_description_ws_decrease">Decrease Word Spacing</string>
    <string name="usersettings_description_ls_increase">Increase Letter Spacing</string>
    <string name="usersettings_description_ls_decrease">Decrease Letter Spacing</string>
    <string name="usersettings_description_lh_increase">Increase Line Height</string>
    <string name="usersettings_description_lh_decrease">Decrease Line Height</string>
    <string name="drm_information_header">INFORMATION</string>
    <string name="drm_label_license_type">License Type</string>
    <string name="drm_label_state">State</string>
    <string name="drm_label_provider">Provider</string>
    <string name="drm_label_issued">Issued</string>
    <string name="drm_label_updated">Updated</string>
    <string name="drm_label_rights">RIGHTS</string>
    <string name="drm_label_prints_left">Prints left</string>
    <string name="drm_label_copies_left">Copies left</string>
    <string name="drm_label_start">Start</string>
    <string name="drm_label_end">End</string>
    <string name="drm_label_potential_right_end">Potential right end</string>
    <string name="drm_label_actions">ACTIONS</string>
    <string name="drm_label_renew">RENEW</string>
    <string name="drm_label_return">RETURN</string>
    <string name="zero">00:00</string>
    <string name="chapter">Chapter</string>
    <string name="chapter_page">Chapter / Page</string>
    <string name="progression">Progression</string>
    <string name="timestamp">Timestamp</string>
    <string name="contents_tab_label">Contents</string>
    <string name="bookmarks_tab_label">Bookmarks</string>
    <string name="highlights_tab_label">Highlights</string>
    <string name="pagelist_tab_label">Page List</string>
    <string name="landmarks_tab_label">Landmarks</string>
    <string name="action_mode_menu_highlight">Highlight</string>
    <string name="action_mode_menu_underline">Underline</string>
    <string name="action_mode_menu_note">Note</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="title_catalogs">Catalogs</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_about">About</string>
    <string name="cover_image">Cover Image</string>
    <string name="repfr">repfr</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_book_title">Delete Book?</string>
    <string name="confirm_delete_book_text">Are you sure you want to delete this book?</string>
    <string name="confirm_delete_catalog_title">Delete Catalog?</string>
    <string name="confirm_delete_catalog_text">Are you sure you want to delete this Catalog feed?</string>
    <string name="add_book">Add a Book</string>
    <string name="add_catalog">Add an Catalog Feed</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter the Title</string>
    <string name="enter_url">Enter the URL</string>
    <string name="invalid_title">Please enter a title</string>
    <string name="invalid_url">Please enter a valid URL</string>
    <string name="catalog_parse_error">Error parsing Catalog feed. Please check the URL and try again</string>
    <string name="publication_image_description">Cover image for %1$s</string>
    <string name="return_publication">This will return the publication</string>
    <string name="return_button">Return</string>
    <string name="end_of_chapter">End of chapter</string>
    <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
    <string name="import_publication_success">Publication added to your library</string>
    <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>
    <string name="publication_error_unsupported_asset">Publication format is not supported</string>
    <string name="publication_error_not_found">Publication has not been found.</string>
    <string name="publication_error_unavailable">Publication is temporarily unavailable.</string>
    <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
    <string name="publication_error_forbidden">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported">Publication source not supported.</string>
    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
    <string name="publication_error_unexpected">An unexpected error occurred.</string>
    <string name="r2.shared.publication.content_protection.exception.not_supported">This publication cannot be opened because it is protected with %1$s</string>
    <string name="r2.shared.publication.content_protection.exception.not_supported.unknown">This publication cannot be opened because it is protected with an unknown DRM</string>
    <string name="r2.shared.resource.exception.bad_request">Invalid request which can\'t be processed</string>
    <string name="r2.shared.resource.exception.not_found">Resource not found</string>
    <string name="r2.shared.resource.exception.forbidden">You are not allowed to access the resource</string>
    <string name="r2.shared.resource.exception.unavailable">The resource is currently unavailable, please try again later</string>
    <string name="r2_shared_resource_exception_offline">The Internet connection appears to be offline</string>
    <string name="r2.shared.resource.exception.out_of_memory">The resource is too large to be read on this device</string>
    <string name="add_an_annotation">Add an annotation</string>
    <string name="delete_highlight_or_annotation">Delete highlight or annotation</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
</resources>