<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Module: r2-navigator-kotlin
  ~ Developers: Aferdita Muriqi, Clément Baumann
  ~
  ~ Copyright (c) 2018. Readium Foundation. All rights reserved.
  ~ Use of this source code is governed by a BSD-style license which is detailed in the
  ~ LICENSE file present in the project repository where this source code is maintained.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/drm"
        android:icon="@drawable/icon_drm"
        android:title="@string/menu_label_drm"
        app:showAsAction="always|always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/menu_label_settings"
        app:showAsAction="always|always" />


    <item
        android:id="@+id/toc"
        android:icon="@drawable/icon_menu"
        android:title="@string/menu_label_toc"
        app:showAsAction="always|always" />

</menu>