<?xml version="1.0" encoding="utf-8"?><!--
  ~ Module: r2-testapp-kotlin
  ~ Developers: Aferdita Muriqi, Clément Baumann, Mostapha Idoubihi, Paul Stoica
  ~
  ~ Copyright (c) 2018. European Digital Reading Lab. All rights reserved.
  ~ Licensed to the Readium Foundation under one or more contributor license agreements.
  ~ Use of this source code is governed by a BSD-style license which is detailed in the
  ~ LICENSE file present in the project repository where this source code is maintained.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context='org.readium.r2.testapp.epub.EpubActivity'>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/epubactivity_search"
        android:orderInCategory="20"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconifiedByDefault="false"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/screen_reader"
        android:icon="@drawable/ic_baseline_headphones_24"
        android:title="@string/epubactivity_read_aloud_start"
        android:orderInCategory="30"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_outline_format_size_24"
        android:title="@string/epubactivity_settings"
        android:orderInCategory="80"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

</menu>